--- a/home.css
+++ b/home.css
@@ -1,16 +1,9 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
 body {
-	background: url("aTrippyBackground.gif") center center;
+	background: url("Backgrounds/movingStars.gif") center center;
 	color: pink;
 	background-size: 10%;
-}
-
-.wrapper {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100vh;
 }
 
 * {
@@ -18,6 +11,19 @@ body {
 	padding: 0;
 	box-sizing: border-box;
 	font-family: "Comic Neue", cursive;
+	overflow-y: hidden;
+}
+
+nav {
+	background: url("Backgrounds/rainbowSquares.gif");
+	padding: 2rem;
+}
+
+.wrapper {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
 }
 
 @keyframes rainbow {
@@ -36,7 +42,7 @@ body {
 
 .content {
 	width: 800px;
-	height: 100vh;
+	height: 80vh;
 	background: rgba(0, 0, 0, 0.7);
 	color: pink;
 	padding: 20px;
@@ -45,7 +51,19 @@ body {
 	animation: rainbow 20s linear infinite;
 }
 
-h1 {
+footer {
+	background: url("Backgrounds/rainbowSquares.gif");
+	padding: 2rem;
 	color: pink;
 }
 
+.main {
+	display: flex;
+	flex-direction: column;
+	height: 100vh;
+}
+
+.fishe {
+	height: 5rem;
+	margin: 2rem;
+}
