--- a/src/frontend/css/home.css
+++ b/src/frontend/css/home.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Comic';
-  src: url('../assets/comicsans.ttf') format('truetype');
+  src: url('../assets/font/comicsans.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
