feat: rename public folder to public instead of frontend to prevent ambiguity and change it accordingly in all files

--- a/frontend/src/public/js/views/home.html
+++ b/frontend/src/public/js/views/home.html
@@ -15,6 +15,6 @@
 </div>
 <div class="fixed bottom-0 left-0 w-full overflow-hidden pointer-events-none h-20">
 	<div class="w-[100%] animate-scrollLeft">
-		<img src="./frontend/assets/gifs/ufo.gif" alt="scrolling gif" class="h-full" />
+		<img src="./public/assets/gifs/ufo.gif" alt="scrolling gif" class="h-full" />
 	</div>
 </div>
