feat: add register button to home view for improved navigation

--- a/frontend/src/public/js/views/home.html
+++ b/frontend/src/public/js/views/home.html
@@ -5,6 +5,7 @@
 		</div>
 		<div class="gap-4 bg-purple-700">
 			<button class="px-6 py-4 rounded-md hover:bg-purple-950" page="home">Home</button>
+			<button class="px-6 py-4 rounded-md hover:bg-purple-950" page="register">Register</button>
 			<button class="px-6 py-4 rounded-md hover:bg-purple-950" page="login">Log in</button>
 			<button class="px-6 py-4 rounded-md hover:bg-purple-950" page="scoreboard">Scoreboard</button>
 		</div>
