--- a/src/frontend/js/views/profile.html
+++ b/src/frontend/js/views/profile.html
@@ -1,2 +1,28 @@
-<h1>Test profile page</h1>
-<p>Meow</p>
+<div class="m-0 p-0 font-comic overflow-y-hidden box-border flex h-screen w-screen items-center justify-center bg-stars bg-10% text-pink-200">
+	<div class="flex flex-col w-1/2 h-full bg-black p-5 text-center border-8 animate-rainbow">
+		<div class="flex justify-center items-center p-16">
+			<img src="https://i.picasion.com/gl/92/kjzM.gif" width="750" height="80">
+		</div>
+		<div class="gap-4 bg-purple-700">
+			<button class="px-4 py-4 rounded-md hover:bg-purple-950" page="home">Home</button>
+			<button class="px-4 py-4 rounded-md hover:bg-purple-950" page="pong">Pong game</button>
+			<button class="px-4 py-4 rounded-md hover:bg-purple-950" page="memory">Memory game</button>
+			<button class="px-4 py-4 rounded-md hover:bg-purple-950" page="profile">Profile</button>
+			<button class="px-4 py-4 rounded-md hover:bg-purple-950" page="scoreboard">Scoreboard</button>
+		</div>
+		<div>
+			<!-- placeholder image with border? -->
+			<!-- username -->
+			<!-- game wins and losses -->
+			<!-- match history -->
+			<!-- searchbar to find and add friends, friendslist + online status -->
+			<!-- button to change profile username/avatar -->
+			<p class="p-16">Profile stuff here</p>
+		</div>
+	</div>
+</div>
+<div class="fixed bottom-0 left-0 w-full overflow-hidden pointer-events-none h-20">
+	<div class="w-[100%] animate-scrollLeft">
+		<img src="./frontend/assets/gifs/ufo.gif" alt="scrolling gif" class="h-full" />
+	</div>
+</div>
