--- a/src/frontend/js/views/home.html
+++ b/src/frontend/js/views/home.html
@@ -13,7 +13,7 @@
       <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="profile">Profile</button>
       <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="login">Log in</button>
       <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="register">Create account</button>
-      <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="scoreboard">Scoreboard</button>
+      <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="leaderboard">Leaderboard</button>
     </div>
     <div class="flex flex-col justify-center items-center gap-12 p-6 sm:p-10 space-y-6">
       <p class="text-base sm:text-lg">Welcome! To play pong or memory, please log in. ʕ◉ᴥ◉ʔ</p>
