--- a/src/frontend/js/views/leaderboard.html
+++ b/src/frontend/js/views/leaderboard.html
@@ -13,10 +13,10 @@
       <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="profile">Profile</button>
       <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="login">Log in</button>
       <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="register">Create account</button>
-      <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="scoreboard">Scoreboard</button>
+      <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="leaderboard">Leaderboard</button>
     </div>
     <div class="flex flex-col justify-center items-center gap-12 p-6 sm:p-10 space-y-6">
-      <p class="text-base sm:text-lg">Scoreboard stuff here. ʕ◉ᴥ◉ʔ</p>
+      <p class="text-base sm:text-lg">Leaderboard stuff here. ʕ◉ᴥ◉ʔ</p>
     </div>
   </div>
   <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="./frontend/assets/gifs/patricksponge.gif" alt="Patrick star gif"/>
