fix: correct form ID from 'registerForm' to 'registrationForm' for consistency

--- a/frontend/src/public/js/views/register.html
+++ b/frontend/src/public/js/views/register.html
@@ -10,7 +10,7 @@
 			<p class="p-16">Register here! ʕ◉ᴥ◉ʔ</p>
 		</div>
 		<div>
-			<form id="registerForm">
+			<form id="registrationForm">
 				<div>
 					<label for="username">Username:</label>
 					<input type="text" id="username" name="username" required>
