Add template for leaderboard

--- a/src/frontend/js/views/leaderboard.html
+++ b/src/frontend/js/views/leaderboard.html
@@ -15,8 +15,20 @@
       <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="register">Create account</button>
       <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="leaderboard">Leaderboard</button>
     </div>
-    <div class="flex flex-col justify-center items-center gap-12 p-6 sm:p-10 space-y-6">
-      <p class="text-base sm:text-lg">Leaderboard stuff here. ʕ◉ᴥ◉ʔ</p>
+    <div class="flex flex-col justify-center items-center gap-8 p-6 sm:p-10">
+      <h1 class="text-base sm:text-lg">Leaderboard</h1>
+      <div class="flex flex-col justify-center items-center gap-4 p-6 sm:p-10 border-8 animate-rainbow">
+        <p>1. Username</p>
+        <p>2. Username</p>
+        <p>3. Username</p>
+        <p>4. Username</p>
+        <p>5. Username</p>
+        <p>6. Username</p>
+        <p>7. Username</p>
+        <p>8. Username</p>
+        <p>9. Username</p>
+        <p>10. Username</p>
+      </div>
     </div>
   </div>
   <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="./frontend/assets/gifs/patricksponge.gif" alt="Patrick star gif"/>
