--- a/frontend/src/public/js/views/profile.html
+++ b/frontend/src/public/js/views/profile.html
@@ -1,6 +1,6 @@
 <div class="fixed top-0 left-0 w-full overflow-hidden pointer-events-none h-20 z-50">
   <div class="w-full animate-scrollLeft">
-    <img src="./frontend/assets/gifs/ufo.gif" alt="scrolling gif" class="h-full"/>
+    <img src="./public/assets/gifs/ufo.gif" alt="scrolling gif" class="h-full"/>
   </div>
 </div>
 
@@ -20,9 +20,9 @@
       <div class="grid grid-cols-2 items-center p-8">
         <h1 class="text-base sm:text-lg">Username here</h1>
         <button onclick="" class="w-4 h-4 sm:w-5 sm:h-5 md:w-6 md:h-6"> <!-- make functionality work -->
-          <img class="w-full h-full object-contain" src="./frontend/assets/gifs/pencil.gif" alt="Edit username, avatar or password"/>
+          <img class="w-full h-full object-contain" src="./public/assets/gifs/pencil.gif" alt="Edit username, avatar or password"/>
         </button>
-        <img class="w-full max-w-xs h-auto" src="./frontend/assets/gifs/aggretsuko.gif" alt="Aggretsuko gif"/> <!-- placeholder avatar -->
+        <img class="w-full max-w-xs h-auto" src="./public/assets/gifs/aggretsuko.gif" alt="Aggretsuko gif"/> <!-- placeholder avatar -->
       </div>
       <div class="flex flex-col items-center border-8 animate-rainbow p-4">
         <h1>Friends</h1>
@@ -35,6 +35,6 @@
       </div>
     </div>
   </div>
-  <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="./frontend/assets/gifs/hellokitty.gif" alt="Patrick star gif"/>
-  <img class="fixed bottom-4 right-4 w-[20vw] max-w-[120px] h-auto z-40" src="./frontend/assets/gifs/eevee.gif" alt="Gloomy bear gif"/>
+  <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/hellokitty.gif" alt="Patrick star gif"/>
+  <img class="fixed bottom-4 right-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/eevee.gif" alt="Gloomy bear gif"/>
 </div>
