--- a/frontend/src/public/js/views/leaderboard.html
+++ b/frontend/src/public/js/views/leaderboard.html
@@ -16,18 +16,18 @@
       <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="leaderboard">Leaderboard</button>
     </div>
     <div class="flex flex-col justify-center items-center gap-8 p-6 sm:p-10">
-      <h1 class="text-base sm:text-lg">Leaderboard</h1>
+      <h1 class="text-base sm:text-lg">Most overall wins</h1>
       <div class="flex flex-col justify-center items-center gap-4 p-6 sm:p-10 border-8 animate-rainbow">
-        <p>1. Username</p>
-        <p>2. Username</p>
-        <p>3. Username</p>
-        <p>4. Username</p>
-        <p>5. Username</p>
-        <p>6. Username</p>
-        <p>7. Username</p>
-        <p>8. Username</p>
-        <p>9. Username</p>
-        <p>10. Username</p>
+        <p>1. Username "number" wins</p>
+        <p>2. Username "number" wins</p>
+        <p>3. Username "number" wins</p>
+        <p>4. Username "number" wins</p>
+        <p>5. Username "number" wins</p>
+        <p>6. Username "number" wins</p>
+        <p>7. Username "number" wins</p>
+        <p>8. Username "number" wins</p>
+        <p>9. Username "number" wins</p>
+        <p>10. Username "number" wins</p>
       </div>
     </div>
   </div>
