chore: push for update, doesn't work

--- a/frontend/src/public/js/views/profile.html
+++ b/frontend/src/public/js/views/profile.html
@@ -22,7 +22,8 @@
         <button onclick="" class="w-4 h-4 sm:w-5 sm:h-5 md:w-6 md:h-6"> <!-- make functionality work -->
           <img class="w-full h-full object-contain" src="./public/assets/gifs/pencil.gif" alt="Edit username, avatar or password"/>
         </button>
-        <img class="w-full max-w-xs h-auto" src="./public/assets/gifs/aggretsuko.gif" alt="Aggretsuko gif"/> <!-- placeholder avatar -->
+        <!-- <img class="w-full max-w-xs h-auto" src="./public/assets/gifs/aggretsuko.gif" alt="Aggretsuko gif"/> placeholder avatar -->
+        <img class="w-full max-w-xs h-auto" src="http://localhost:8082/users/avatar" alt="User Avatar"/>
       </div>
       <div class="flex flex-col items-center border-8 animate-rainbow p-4">
         <h1>Friends</h1>
