Add leaderboard to display data from script, doesn't work with database yet

--- a/frontend/src/public/js/views/leaderboard.html
+++ b/frontend/src/public/js/views/leaderboard.html
@@ -18,16 +18,7 @@
     <div class="flex flex-col justify-center items-center gap-8 p-6 sm:p-10">
       <h1 class="text-base sm:text-lg">Most overall wins</h1>
       <div class="flex flex-col justify-center items-center gap-4 p-6 sm:p-10 border-8 animate-rainbow">
-        <p>1. Username "number" wins</p>
-        <p>2. Username "number" wins</p>
-        <p>3. Username "number" wins</p>
-        <p>4. Username "number" wins</p>
-        <p>5. Username "number" wins</p>
-        <p>6. Username "number" wins</p>
-        <p>7. Username "number" wins</p>
-        <p>8. Username "number" wins</p>
-        <p>9. Username "number" wins</p>
-        <p>10. Username "number" wins</p>
+        <div id="usernameScript">
       </div>
     </div>
   </div>
