feat: add buttons to enable and disable two-factor authentication in profile view

--- a/frontend/src/public/js/views/profile.html
+++ b/frontend/src/public/js/views/profile.html
@@ -33,6 +33,12 @@
       <div class="flex flex-col items-center border-8 animate-rainbow p-4">
         <h1>Match history</h1>
       </div>
+      <button id="enable-2fa" class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md border-8 animate-rainbow p-4 bg-emerald-950 hover:bg-purple-950 w-full sm:w-auto"> 
+        Enable 2fa
+      </button>
+          <button id="disable-2fa" class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md border-8 animate-rainbow p-4 bg-red-950 hover:bg-purple-950 w-full sm:w-auto"> 
+        Disable 2fa
+      </button>
     </div>
   </div>
   <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/hellokitty.gif" alt="Patrick star gif"/>
