feat: implement user info update functionality including username and password changes

--- a/frontend/src/public/js/views/profile.html
+++ b/frontend/src/public/js/views/profile.html
@@ -18,24 +18,27 @@
     </div>
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 p-6 sm:p-10">
       <div class="grid grid-cols-2 items-center p-8">
-        <h1 class="text-base sm:text-lg">Username here</h1>
-		<!-- Change user info logic from here -->
-		<button id="open-modal" class="w-4 h-4 sm:w-5 sm:h-5 md:w-6 md:h-6"> <!-- make functionality work -->
-		  <img class="w-full h-full object-contain" src="./public/assets/gifs/pencil.gif" alt="Edit username or password"/>
-		</button>
-		<dialog class="modal" id="modal">
-			<h2>Update username, password or avatar</h2>
-			<button class="button close-button">Close</button>
-		</dialog>
-		<!-- Change avatar button logic -->
-		<form id="avatarForm" enctype="multipart/form-data">
-		 	<input type="file" id="avatarInput" accept="image/*" name="avatar">
-			<button type="submit">
-				Upload
-			</button>
-		</form>
-		 <!-- Change avatar button logic end -->
-		  <!-- Change user info logic end -->
+      	<h1 id="username" class="text-base sm:text-lg"></h1>
+				<button id="openUserInfoEditor" class="w-4 h-4 sm:w-5 sm:h-5 md:w-6 md:h-6">
+					<img class="w-full h-full object-contain" src="./public/assets/gifs/pencil.gif" alt="Edit username or password"/>
+				</button>
+				<dialog class="modal" id="modal"> <!-- Edit user info -->
+					<h2>Update username, password or avatar</h2>
+					<form id="avatarForm" enctype="multipart/form-data">
+		 				<input type="file" id="avatarInput" accept="image/*" name="avatar">
+						<button type="submit">Upload</button>
+					</form>
+					<form id="usernameForm">
+						<label>New username<input type="text" id="newUsername"></label>
+						<button type="submit">Submit</button>
+					</form>
+					<form id="passwordForm">
+						<label>New password<input type="text" id="newPassword"></label>
+						<button type="submit">Submit</button>
+					</form>
+					<button id="closeUserInfoEditor">Close</button>
+				</dialog>
+				<script type="module" src="./public/js/profile.js"></script>
         <img class="w-full max-w-xs h-auto" src="/api/user/avatar?ts=TIMESTAMP" alt="User Avatar"/>
       </div>
       <div class="flex flex-col items-center border-8 animate-rainbow p-4">
