feat: update 2FA button styles for improved visibility and consistency

--- a/frontend/src/public/js/views/profile.html
+++ b/frontend/src/public/js/views/profile.html
@@ -36,10 +36,10 @@
 						<label>New password<input type="text" id="newPassword" class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500"></label>
 						<button type="submit" class="sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 text-white mt-2">Submit</button>
 					</form> 
-					<button id="enable-2fa" class="sm:text-base rounded-md border-2 border-emerald-500 bg-emerald-900 hover:border-purple-500 hover:bg-purple-950 text-white mt-2">Enable 2fa</button>
-					<button id="disable-2fa" class="sm:text-base rounded-md border-2 border-red-500 bg-red-900 hover:border-purple-500 hover:bg-purple-950 text-white mt-2">Disable 2fa</button>
+					<button id="enable-2fa" class="sm:text-base rounded-md border-2 border-emerald-500 bg-emerald-700 hover:border-purple-500 hover:bg-purple-950 text-white mt-2">Enable 2fa</button>
+					<button id="disable-2fa" class="sm:text-base rounded-md border-2 border-red-500 bg-red-700 hover:border-purple-500 hover:bg-purple-950 text-white mt-2">Disable 2fa</button>
 					<img id="qr-code" class=" mt-4 mb-6 w-48 h-48 sm:w-64 sm:h-64 mx-auto" src="" alt="QR code for 2fa setup"/> <!-- QR code for 2FA setup -->
-					<div id="2fa-instructions" class=" text-left mb-6">
+					<div id="2fa-instructions" class=" text-left mb-6 ms-2">
 						<h2 class="text-lg font-bold mb-2">2FA Setup Instructions</h2>
 						<ol class="list-decimal list-inside">
 							<li>Download an authenticator app (e.g., Google Authenticator, Authy, or Microsoft Authenticator).</li>
