--- a/frontend/src/public/js/views/profile.html
+++ b/frontend/src/public/js/views/profile.html
@@ -29,11 +29,17 @@
 						<button type="submit" class="sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 text-white mt-2">Upload</button>
 					</form>
 					<form id="usernameForm">
-						<label>New username<input type="text" id="newUsername" class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500"></label>
+						<label>New username
+							<input type="text" id="newUsername"
+								placeholder="Enter new username" required
+								class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500"></label>
 						<button type="submit" class="sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 text-white mt-2">Submit</button>
 					</form>
 					<form id="passwordForm">
-						<label>New password<input type="text" id="newPassword" class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500"></label>
+						<label>New password
+							<input type="text" id="newPassword"
+								placeholder="Enter new password" required
+								class="sm:text-base rounded-md border-2 border-gray-300 focus:outline-none focus:ring-2 focus:ring-purple-500"></label>
 						<button type="submit" class="sm:text-base rounded-md border-2 border-purple-500 bg-purple-700 hover:bg-purple-950 text-white mt-2">Submit</button>
 					</form> 
 					<button id="enable-2fa" class="sm:text-base rounded-md border-2 border-emerald-500 bg-emerald-700 hover:border-purple-500 hover:bg-purple-950 text-white mt-2">Enable 2fa</button>
