Add setup for room pages for games

--- a/frontend/src/public/js/views/profile.html
+++ b/frontend/src/public/js/views/profile.html
@@ -20,7 +20,7 @@
 				<button id="openUserInfoEditor" class="w-4 h-4 sm:w-5 sm:h-5 md:w-6 md:h-6">
 					<img class="w-full h-full object-contain" src="./public/assets/gifs/pencil.gif" alt="Edit username or password"/>
 				</button>
-				<dialog class="modal" id="modal"> <!-- Edit user info -->
+				<dialog class="modal" id="modal">
 					<h2>Update username, password or avatar</h2>
 					<form id="avatarForm" enctype="multipart/form-data">
 		 				<input type="file" id="avatarInput" accept="image/*" name="avatar">
@@ -50,6 +50,6 @@
       </div>
     </div>
   </div>
-  <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/hellokitty.gif" alt="Patrick star gif"/>
-  <img class="fixed bottom-4 right-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/eevee.gif" alt="Gloomy bear gif"/>
+  <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/hellokitty.gif" alt="Hello kitty gif"/>
+  <img class="fixed bottom-4 right-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/eevee.gif" alt="Eevee gif"/>
 </div>
