--- a/frontend/src/public/js/views/pong.html
+++ b/frontend/src/public/js/views/pong.html
@@ -1,2 +1,24 @@
-<h1>Test game page</h1>
-<p>Meow</p>
+<div class="fixed top-0 left-0 w-full overflow-hidden pointer-events-none h-20 z-50">
+  <div class="w-full animate-scrollLeft">
+    <img src="./public/assets/gifs/ufo.gif" alt="scrolling gif" class="h-full"/>
+  </div>
+</div>
+<div class="m-0 p-0 font-comic overflow-y-hidden box-border flex h-screen w-screen items-center justify-center bg-stars bg-10% text-pink-200 relative">
+  <div class="flex flex-col w-full max-w-4xl h-[95vh] bg-black p-4 sm:p-6 md:p-8 text-center border-8 animate-rainbow overflow-y-auto">
+    <div class="flex justify-center items-center py-6">
+      <img src="https://i.picasion.com/gl/92/kjzM.gif" alt="header gif" class="w-full max-w-[750px] h-auto"/>
+    </div>
+    <div class="flex flex-col sm:flex-row sm:flex-wrap justify-center items-center gap-4 bg-purple-700 p-4">
+	    <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="profile">Profile</button>
+      <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="memory">Memory</button>
+      <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto">Log out</button>
+    </div>
+    <div class="flex flex-col justify-center items-center gap-12 p-6 sm:p-10 space-y-6">
+      <h1 class="text-base sm:text-lg">Available rooms</h1>
+      <!-- add a button to create a game -->
+      <!-- display already made rooms -->
+    </div>
+  </div>
+  <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/hellokitty.gif" alt="Hello kitty gif"/>
+  <img class="fixed bottom-4 right-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/eevee.gif" alt="Eevee gif"/>
+</div>
