--- a/frontend/src/public/js/views/profile.html
+++ b/frontend/src/public/js/views/profile.html
@@ -38,20 +38,41 @@
 					</form>
 					<button id="closeUserInfoEditor">Close</button>
 				</dialog>
-				<script type="module" src="./public/js/profile.js"></script>
         <img class="w-full max-w-xs h-auto" src="/api/user/avatar?ts=TIMESTAMP" alt="User Avatar"/>
-      	</div>
-      <div class="flex flex-col items-center border-8 animate-rainbow p-4">
-        <h1>Friends</h1>
       </div>
-      <div class="flex flex-col items-center border-8 animate-rainbow p-4">
-        <h1>Wins / losses</h1>
-      </div>
-      <div class="flex flex-col items-center border-8 animate-rainbow p-4">
-        <h1>Match history</h1>
-      </div>
+    <div class="flex flex-col items-center border-8 animate-rainbow p-4">
+			<h1 class="text-base sm:text-lg">Friends</h1>
+			<ul>
+				<li> <!-- use class for styling -->
+					<span id="friend0"></span>
+					<span id="status0"></span>
+				</li>
+				<li> <!-- use class for styling -->
+					<span id="friend1"></span>
+					<span id="status1"></span>
+				</li>
+				<li>
+					<span id="friend2"></span>
+					<span id="status2"></span>
+				</li>
+				<li>
+					<span id="friend3"></span>
+					<span id="status3"></span>
+				</li>
+				<li>
+					<span id="friend4"></span>
+					<span id="status4"></span>
+				</li>
+			</ul>
     </div>
+		<div class="flex flex-col items-center border-8 animate-rainbow p-4">
+			<h1>Wins / losses</h1>
+		</div>
+		<div class="flex flex-col items-center border-8 animate-rainbow p-4">
+			<h1>Match history</h1>
+		</div>
   </div>
   <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/hellokitty.gif" alt="Patrick star gif"/>
   <img class="fixed bottom-4 right-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/eevee.gif" alt="Gloomy bear gif"/>
 </div>
+<script type="module" src="./public/js/profile.js"></script>
