states in frontend

--- a/frontend/public/views/leaderboard.html
+++ b/frontend/public/views/leaderboard.html
@@ -1,6 +1,6 @@
 <div class="fixed top-0 left-0 w-full overflow-hidden pointer-events-none h-20 z-50">
   <div class="w-full animate-scrollLeft">
-    <img src="./public/assets/gifs/ufo.gif" alt="scrolling gif" class="h-full"/>
+    <img src="../assets/gifs/ufo.gif" alt="scrolling gif" class="h-full"/>
   </div>
 </div>
 <div class="m-0 p-0 font-comic overflow-y-hidden box-border flex h-screen w-screen items-center justify-center bg-stars bg-10% text-pink-200 relative">
@@ -31,6 +31,6 @@
       </div>
     </div>
   </div>
-  <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/patricksponge.gif" alt="Patrick star gif"/>
-  <img class="fixed bottom-4 right-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/gloomy2.gif" alt="Gloomy bear gif"/>
+  <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="../assets/gifs/patricksponge.gif" alt="Patrick star gif"/>
+  <img class="fixed bottom-4 right-4 w-[20vw] max-w-[120px] h-auto z-40" src="../assets/gifs/gloomy2.gif" alt="Gloomy bear gif"/>
 </div>
