--- a/frontend/public/views/login.html
+++ b/frontend/public/views/login.html
@@ -7,10 +7,10 @@
 			<button class="px-6 py-4 rounded-md hover:bg-purple-950" page="home">Home</button>
 		</div>
 		<div>
-			<p class="p-16">Register here! ʕ◉ᴥ◉ʔ</p>
+			<p class="p-16">Log in here! ʕ◉ᴥ◉ʔ</p>
 		</div>
 		<div>
-			<form id="registrationForm">
+			<form id="loginForm">
 				<div>
 					<label for="username">Username:</label>
 					<input type="text" id="username" name="username" required>
@@ -26,6 +26,6 @@
 </div>
 <div class="fixed bottom-0 left-0 w-full overflow-hidden pointer-events-none h-20">
 	<div class="w-[100%] animate-scrollLeft">
-		<img src="./public/assets/gifs/ufo.gif" alt="scrolling gif" class="h-full" />
+		<img src="../assets/gifs/ufo.gif" alt="scrolling gif" class="h-full" />
 	</div>
 </div>
