--- a/frontend/public/views/home.html
+++ b/frontend/public/views/home.html
@@ -1,6 +1,6 @@
 <div class="fixed top-0 left-0 w-full overflow-hidden pointer-events-none h-20 z-50">
   <div class="w-full animate-scrollLeft">
-    <img src="./public/assets/gifs/ufo.gif" alt="scrolling gif" class="h-full"/>
+    <img src="/assets/gifs/ufo.gif" alt="scrolling gif" class="h-full"/>
   </div>
 </div>
 <div class="m-0 p-0 font-comic overflow-y-hidden box-border flex h-screen w-screen items-center justify-center bg-stars bg-10% text-pink-200 relative">
@@ -18,15 +18,14 @@
     <div class="flex flex-col justify-center items-center gap-12 p-6 sm:p-10 space-y-6">
       <h1 class="text-base sm:text-lg">Welcome! To play pong or memory, please log in. ʕ◉ᴥ◉ʔ</h1>
       <div class="w-full aspect-video max-w-xl">
-        <iframe class="w-full h-full" src="https://www.youtube.com/embed/cNAdtkSjSps?si=Do3lmQBdXlDlhSI0"
-          title="YouTube video player" frameborder="0"
+        <iframe class="w-full h-full" src="https://www.youtube.com/embed/cNAdtkSjSps"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
         </iframe>
       </div>
-      <img class="w-full max-w-xs h-auto" src="./public/assets/gifs/gojo.gif" alt="Gojo gif"/>
+      <img class="w-full max-w-xs h-auto" src="/assets/gifs/gojo.gif" alt="Gojo gif"/>
     </div>
   </div>
-  <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/patricksponge.gif" alt="Patrick star gif"/>
-  <img class="fixed bottom-4 right-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/gloomy2.gif" alt="Gloomy bear gif"/>
+  <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="/assets/gifs/patricksponge.gif" alt="Patrick star gif"/>
+  <img class="fixed bottom-4 right-4 w-[20vw] max-w-[120px] h-auto z-40" src="/assets/gifs/gloomy2.gif" alt="Gloomy bear gif"/>
 </div>
