--- a/frontend/src/public/js/views/profile.html
+++ b/frontend/src/public/js/views/profile.html
@@ -41,29 +41,8 @@
         <img class="w-full max-w-xs h-auto" id="avatarImg" alt="User Avatar"/>
       </div>
     <div class="flex flex-col items-center border-8 animate-rainbow p-4">
-			<h1 class="text-base sm:text-lg">Friends</h1>
-			<ul>
-				<li> <!-- use class for styling -->
-					<span id="friend0"></span>
-					<span id="status0"></span>
-				</li>
-				<li> <!-- use class for styling -->
-					<span id="friend1"></span>
-					<span id="status1"></span>
-				</li>
-				<li>
-					<span id="friend2"></span>
-					<span id="status2"></span>
-				</li>
-				<li>
-					<span id="friend3"></span>
-					<span id="status3"></span>
-				</li>
-				<li>
-					<span id="friend4"></span>
-					<span id="status4"></span>
-				</li>
-			</ul>
+		<h1 class="text-base sm:text-lg">Friends</h1>
+		<ul id="friends-list"></ul>
     </div>
 		<div class="flex flex-col items-center border-8 animate-rainbow p-4">
 			<h1>Wins / losses</h1>
