integrate auth service

--- a/frontend/public/views/profile.html
+++ b/frontend/public/views/profile.html
@@ -42,28 +42,7 @@
       </div>
     <div class="flex flex-col items-center border-8 animate-rainbow p-4">
 			<h1 class="text-base sm:text-lg">Friends</h1>
-			<ul>
-				<li> <!-- use class for styling -->
-					<span id="friend0"></span>
-					<span id="status0"></span>
-				</li>
-				<li> <!-- use class for styling -->
-					<span id="friend1"></span>
-					<span id="status1"></span>
-				</li>
-				<li>
-					<span id="friend2"></span>
-					<span id="status2"></span>
-				</li>
-				<li>
-					<span id="friend3"></span>
-					<span id="status3"></span>
-				</li>
-				<li>
-					<span id="friend4"></span>
-					<span id="status4"></span>
-				</li>
-			</ul>
+			<ul id="friendsList"></ul>
     </div>
 		<div class="flex flex-col items-center border-8 animate-rainbow p-4">
 			<h1>Wins / losses</h1>
