--- a/frontend/public/views/profile.html
+++ b/frontend/public/views/profile.html
@@ -12,6 +12,7 @@
 		<div class="flex flex-col sm:flex-row sm:flex-wrap justify-center items-center gap-4 bg-purple-700 p-4">
 			<button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="profile">Profile</button>
 			<button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="matchmaking">Play game</button>
+			<button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" id="logout">Log out</button>
 		</div>
 		<div class="grid grid-cols-1 sm:grid-cols-2 gap-6 p-6 sm:p-10">
 			<div class="grid grid-cols-2 items-center p-8">
