new matchmaking frontend

--- a/frontend/public/views/pong.html
+++ b/frontend/public/views/pong.html
@@ -14,25 +14,9 @@
       <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto">Log out</button>
     </div>
     <div class="flex flex-col justify-center items-center gap-12 p-6 sm:p-10 space-y-6">
-      <div class="flex flex-col sm:flex-row justify-center gap-4 mt-8 w-full max-w-2xl">
-        <button class="flex-1 px-6 py-3 bg-blue-900 hover:bg-blue-950 rounded-md text-lg">
-          Create Match
-        </button>
-        <button class="flex-1 px-6 py-3 bg-blue-900 hover:bg-blue-950 rounded-md text-lg">
-          Create Tournament
-        </button>
-      </div>
-      <div class="flex flex-col gap-4 w-full max-w-2xl">
-        <div class="flex flex-col sm:flex-row justify-between items-center bg-purple-900/80 border border-purple-600 rounded-lg p-4 gap-4">
-          <div class="text-left">
-            <p class="text-lg font-semibold">Tournament #1</p> <!-- Pull data from db -->
-            <p class="text-sm text-purple-200">Created by Chey • 3/8 players</p> <!-- Pull data from db -->
-          </div>
-          <button class="px-4 py-2 bg-blue-900 hover:bg-blue-950 rounded-md w-full sm:w-auto">Join</button>
-        </div>
-        <!-- Add more matches/tournaments depending on if any available -->
-      </div>
-
+      <p>
+        There will be a game
+      </p>
     </div>
   </div>
   <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/hellokitty.gif" alt="Hello kitty gif"/>
