Fix black input boxes, it's now white again and remove unused pullUsername

--- a/frontend/public/views/register.html
+++ b/frontend/public/views/register.html
@@ -14,11 +14,11 @@
 			<form id="registrationForm">
 				<div>
 					<label for="username">Username:</label>
-					<input type="text" id="username" name="username" required>
+					<input class="bg-white text-black" type="text" id="username" name="username" required>
 				</div>
 				<div>
 					<label for="password">Password:</label>
-					<input type="text" id="password" name="password" required>
+					<input class="bg-white text-black" type="text" id="password" name="password" required>
 				</div>
 				<input type="submit" value="Submit">
 			</form>
