--- a/frontend/public/views/profile.html
+++ b/frontend/public/views/profile.html
@@ -20,7 +20,7 @@
 			<div class="grid grid-cols-2 items-center p-8">
 				<h1 id="username" class="text-base sm:text-lg"></h1>
 				<button id="openUserInfoEditor" class="w-4 h-5 sm:w-5 sm:h-6 md:w-6 md:h-7">
-					<img class="w-full h-full object-contain" src="./public/assets/gifs/pencil.gif" alt="Edit username or password"/>
+					<img class="w-full h-full object-contain" src="./assets/gifs/pencil.gif" alt="Edit username or password"/>
 				</button>
 				<dialog class="modal m-2" id="modal"> <!-- Edit user info -->
 					<h2>Update username, password or avatar</h2>
