--- a/frontend/public/views/matchmaking.html
+++ b/frontend/public/views/matchmaking.html
@@ -11,7 +11,7 @@
         <div class="flex flex-col sm:flex-row sm:flex-wrap justify-center items-center gap-4 bg-purple-700 p-4">
             <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="profile">Profile</button>
             <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="memory">Memory</button>
-            <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto">Log out</button>
+            <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" id="logout">Log out</button>
         </div>
         <div class="flex flex-col justify-center items-center gap-12 p-6 sm:p-10 space-y-6">
             <div class="flex flex-col sm:flex-row justify-center gap-4 mt-8 w-full max-w-2xl">
