--- a/frontend/public/views/pong.html
+++ b/frontend/public/views/pong.html
@@ -1,24 +1,16 @@
-<div class="fixed top-0 left-0 w-full overflow-hidden pointer-events-none h-20 z-50">
-  <div class="w-full animate-scrollLeft">
-    <img src="./public/assets/gifs/ufo.gif" alt="scrolling gif" class="h-full"/>
+<div class="m-0 p-4 font-comic overflow-hidden box-border h-screen w-screen bg-stars bg-10% text-pink-200 flex flex-col justify-between">
+  <div class="flex items-center justify-center flex-grow">
+    <canvas id="myCanvas" class="bg-black border-8 animate-rainbow w-[90vw] h-[80vh]"></canvas>
   </div>
-</div>
-<div class="m-0 p-0 font-comic overflow-y-hidden box-border flex h-screen w-screen items-center justify-center bg-stars bg-10% text-pink-200 relative">
-  <div class="flex flex-col w-full max-w-4xl h-[95vh] bg-black p-4 sm:p-6 md:p-8 text-center border-8 animate-rainbow overflow-y-auto">
-    <div class="flex justify-center items-center py-6">
-      <img src="https://i.picasion.com/gl/92/kjzM.gif" alt="header gif" class="w-full max-w-[750px] h-auto"/>
+
+  <div class="flex justify-between items-end mt-4 text-sm sm:text-base">
+    <div class="bg-purple-950/60 p-2 rounded-md max-w-[50vw]">
+      <!-- depending on how many users, display username and score here -->
+      <p><span class="font-bold">Oliver</span>: 6</p>
+      <p><span class="font-bold">Milana</span>: 6</p>
+      <p><span class="font-bold">Michelle</span>: 6</p>
     </div>
-    <div class="flex flex-col sm:flex-row sm:flex-wrap justify-center items-center gap-4 bg-purple-700 p-4">
-	    <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="profile">Profile</button>
-      <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="memory">Memory</button>
-      <button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto">Log out</button>
-    </div>
-    <div class="flex flex-col justify-center items-center gap-12 p-6 sm:p-10 space-y-6">
-      <p>
-        There will be a game
-      </p>
-    </div>
+    <!-- make button quit the game for all users and redirect to rooms page? -->
+    <button class="px-3 py-2 sm:px-6 sm:py-4 rounded-md bg-purple-700 hover:bg-purple-950">Quit game</button>
   </div>
-  <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/hellokitty.gif" alt="Hello kitty gif"/>
-  <img class="fixed bottom-4 right-4 w-[20vw] max-w-[120px] h-auto z-40" src="./public/assets/gifs/eevee.gif" alt="Eevee gif"/>
 </div>
