--- a/frontend/public/views/pong.html
+++ b/frontend/public/views/pong.html
@@ -4,11 +4,11 @@
   </div>
 
   <div class="flex justify-between items-end mt-4 text-sm sm:text-base">
-    <div class="bg-purple-950/60 p-2 rounded-md max-w-[50vw]">
+    <div class="bg-purple-950/60 p-2 rounded-md max-w-[50vw] font-bold">
       <!-- depending on how many users, display username and score here -->
-      <p><span class="font-bold">Oliver</span>: 6</p>
-      <p><span class="font-bold">Milana</span>: 6</p>
-      <p><span class="font-bold">Michelle</span>: 6</p>
+      <p>Oliver: 6</p>
+      <p>Milana: 6</p>
+      <p>Michelle: 6</p>
     </div>
     <!-- make button quit the game for all users and redirect to rooms page? -->
     <button class="px-3 py-2 sm:px-6 sm:py-4 rounded-md bg-purple-700 hover:bg-purple-950">Quit game</button>
