Hide password input

--- a/frontend/public/views/login.html
+++ b/frontend/public/views/login.html
@@ -24,7 +24,7 @@
 				</div>
 				<div>
 					<label for="password">Password:</label>
-					<input class="bg-white text-black" type="text" id="password" name="password" required>
+					<input class="bg-white text-black" type="password" id="password" name="password" required>
 				</div>
 				<input type="submit" value="Submit">
 			</form>
