feat: implement friend request functionality and update profile view

--- a/frontend/public/views/profile.html
+++ b/frontend/public/views/profile.html
@@ -69,6 +69,20 @@
 			<div class="flex flex-col items-center border-8 animate-rainbow p-4">
 				<h1>Match history</h1>
 			</div>
+			<div class="flex flex-col items-center border-8 animate-rainbow p-4">
+				<h1 class="text-base sm:text-lg">Friend Requests</h1>
+				<ul id="requests"></ul>
+			</div>
+			<div class="flex flex-col items-center border-8 animate-rainbow p-4" >
+				<h1 class="text-base sm:text-lg">Friend Search</h1>
+				<div>
+					<input type="text" id="search-input" placeholder="Search for username...">
+					<button id="search-button">Search</button>
+				</div>
+				<div id="search-results">
+
+				</div>
+			</div>
 		</div>
 		<img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="/assets/gifs/hellokitty.gif" alt="Hello kitty gif"/>
 		<img class="fixed bottom-4 right-4 w-[20vw] max-w-[120px] h-auto z-40" src="/assets/gifs/eevee.gif" alt="Eevee gif"/>
