feat: add usernameSender to FriendshipSchema and update friend request handling in profile view

--- a/frontend/public/views/profile.html
+++ b/frontend/public/views/profile.html
@@ -77,10 +77,7 @@
 				<h1 class="text-base sm:text-lg">Friend Search</h1>
 				<div>
 					<input type="text" id="search-input" placeholder="Search for username...">
-					<button id="search-button">Search</button>
-				</div>
-				<div id="search-results">
-
+					<button id="search-button" class="sm:text-base rounded-md border-2 border-blue-500 bg-blue-700 hover:border-purple-500 hover:bg-purple-950 text-white mt-2">Send Friend Request</button>
 				</div>
 			</div>
 		</div>
