[fix] working frontend game

--- a/frontend/public/views/pong.html
+++ b/frontend/public/views/pong.html
@@ -11,6 +11,6 @@
       <p>Michelle: 6</p>
     </div>
     <!-- make button quit the game for all users and redirect to rooms page? -->
-    <button class="px-3 py-2 sm:px-6 sm:py-4 rounded-md bg-purple-700 hover:bg-purple-950">Quit game</button>
+    <button id="quitButton" class="px-3 py-2 sm:px-6 sm:py-4 rounded-md bg-purple-700 hover:bg-purple-950">Quit game</button>
   </div>
 </div>
