--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -59,6 +59,14 @@
     }
   }
 
+  .pong-canvas {
+    -ms-interpolation-mode: nearest-neighbor;
+    image-rendering: crisp-edges;
+    image-rendering: -moz-crisp-edges;
+    image-rendering: -webkit-crisp-edges;
+    image-rendering: pixelated;
+  }
+
   .animate-rainbow {
     animation: rainbow 20s infinite;
   }
