--- a/frontend/public/views/profile.html
+++ b/frontend/public/views/profile.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="m-0 p-0 font-comic overflow-y-hidden box-border flex h-screen w-screen items-center justify-center bg-stars bg-10% text-pink-200 relative">
-	<div class="flex flex-col w-full max-w-4xl h-[95vh] bg-black p-4 sm:p-6 md:p-8 text-center border-8 animate-rainbow overflow-y-auto">
+	<div class="flex flex-col w-full max-w-4xl h-[95vh] bg-black p-4 sm:p-6 md:p-8 text-center border-8 animate-rainbow overflow-y-auto custom-scrollbar">
 		<div class="flex justify-center items-center py-6">
 			<img src="https://i.picasion.com/gl/92/kjzM.gif" alt="header gif" class="w-full max-w-[750px] h-auto"/>
 		</div>
@@ -59,17 +59,17 @@
 			</div>
 			<div class="flex flex-col items-center border-8 animate-rainbow p-6 h-32 w-full">
 				<h1 class="text-base sm:text-lg font-bold">Wins / losses</h1>
-				<div id="winsAndLosses" class="w-full overflow-y-auto max-h-48 mt-2"></div>
+				<div id="winsAndLosses" class="w-full overflow-y-auto custom-scrollbar max-h-48 mt-2"></div>
 			</div>
-			<div class="flex flex-col items-center border-8 animate-rainbow p-6 h-64 sm:h-72 w-full overflow-y-auto">
+			<div class="flex flex-col items-center border-8 animate-rainbow p-6 h-64 sm:h-72 w-full overflow-y-auto custom-scrollbar">
 				<h1 class="text-base sm:text-lg font-bold">Match history</h1>
-				<div id="matchHistory" class="w-full overflow-y-auto max-h-48 mt-2"></div>
+				<div id="matchHistory" class="w-full overflow-y-auto custom-scrollbar max-h-48 mt-2"></div>
 			</div>
-			<div class="flex flex-col items-center border-8 animate-rainbow p-6 h-64 sm:h-72 w-full overflow-y-auto">
+			<div class="flex flex-col items-center border-8 animate-rainbow p-6 h-64 sm:h-72 w-full overflow-y-auto custom-scrollbar">
 				<h1 class="text-base sm:text-lg font-bold">Friends</h1>
 				<ul id="friendsList"></ul>
 			</div>
-			<div class="flex flex-col items-center border-8 animate-rainbow p-4 w-full overflow-y-auto">
+			<div class="flex flex-col items-center border-8 animate-rainbow p-4 w-full overflow-y-auto custom-scrollbar">
 				<h1 class="text-base sm:text-lg font-bold">Friend Requests</h1>
 				<ul id="requests"></ul>
 			</div>
