feat: update login and registration forms to use email instead of username

--- a/frontend/public/views/register.html
+++ b/frontend/public/views/register.html
@@ -18,12 +18,16 @@
 		<div>
 			<form id="registrationForm">
 				<div>
-					<label for="username">Username:</label>
-					<input class="bg-white text-black" type="text" id="username" name="username" required>
+					<label for="email">Email:</label>
+					<input class="bg-white text-black" type="email" id="email" name="email" required>
 				</div>
 				<div>
 					<label for="password">Password:</label>
 					<input class="bg-white text-black" type="password" id="password" name="password" required>
+				</div>
+				<div>
+					<label for="username">Username:</label>
+					<input class="bg-white text-black" type="text" id="username" name="username" required>
 				</div>
 				<input type="submit" value="Submit">
 			</form>
