--- a/frontend/public/views/login.html
+++ b/frontend/public/views/login.html
@@ -19,8 +19,8 @@
 		<div>
 			<form id="loginForm">
 				<div>
-					<label for="username">Username:</label>
-					<input class="bg-white text-black" type="text" id="username" name="username" required>
+					<label for="email">Email:</label>
+					<input class="bg-white text-black" type="email" id="email" name="email" required>
 				</div>
 				<div>
 					<label for="password">Password:</label>
