Added more fun stuff

--- a/frontend/public/views/profile.html
+++ b/frontend/public/views/profile.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="m-0 p-0 font-comic overflow-y-hidden box-border flex h-screen w-screen items-center justify-center bg-stars bg-10% text-pink-200 relative">
-	<div class="flex flex-col w-full max-w-4xl h-[95vh] bg-black p-4 sm:p-6 md:p-8 text-center border-8 animate-rainbow overflow-y-auto custom-scrollbar">
+	<div class="flex flex-col w-full max-w-4xl h-[95vh] bg-black p-2 sm:p-6 md:p-8 text-center border-8 animate-rainbow overflow-y-auto custom-scrollbar">
 		<div class="flex justify-center items-center py-6">
 			<img src="https://i.picasion.com/gl/92/kjzM.gif" alt="header gif" class="w-full max-w-[750px] h-auto"/>
 		</div>
@@ -14,8 +14,8 @@
 			<button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" page="matchmaking">Play game</button>
 			<button class="px-3 py-2 text-sm sm:px-6 sm:py-4 sm:text-base rounded-md hover:bg-purple-950 w-full sm:w-auto" id="logout">Log out</button>
 		</div>
-		<div class="grid grid-cols-1 sm:grid-cols-2 gap-6 p-6 sm:p-10">
-			<div class="grid grid-cols-2 items-center p-8">
+		<div class="grid grid-cols-1 sm:grid-cols-2 gap-4 p-4 sm:p-6">
+			<div class="grid grid-cols-2 items-center p-6">
 				<h1 id="username" class="text-base sm:text-lg"></h1>
 				<button id="openUserInfoEditor" class="w-4 h-5 sm:w-5 sm:h-6 md:w-6 md:h-7">
 					<img class="w-full h-full object-contain" src="./assets/gifs/pencil.gif" alt="Edit username or password"/>
@@ -83,5 +83,19 @@
 		</div>
 		<img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="/assets/gifs/hellokitty.gif" alt="Hello kitty gif"/>
 		<img class="fixed bottom-4 right-4 w-[20vw] max-w-[120px] h-auto z-40" src="/assets/gifs/eevee.gif" alt="Eevee gif"/>
+		<div class="flex flex-wrap items-center justify-center gap-2 mt-6 p-2">
+			<img class="h-8 sm:h-10" src="/assets/gifs/best_viewed_with_eyes.gif" alt="Eyes gif"/>
+			<img class="h-8 sm:h-10" src="/assets/gifs/borgor.gif" alt="Borgor gif"/>
+			<img class="h-8 sm:h-10" src="/assets/gifs/bunbrowser.gif" alt="Bun gif"/>
+			<img class="h-8 sm:h-10" src="/assets/gifs/DeadNow.jpg" alt="Dead jpg"/>
+			<img class="h-8 sm:h-10" src="/assets/gifs/death.gif" alt="Death gif"/>
+			<img class="h-8 sm:h-10" src="/assets/gifs/homicide.gif" alt="Homicide gif"/>
+			<img class="h-8 sm:h-10" src="/assets/gifs/internet-roadkill.gif" alt="Roadkill gif"/>
+			<img class="h-8 sm:h-10" src="/assets/gifs/killerfish.gif" alt="Killerfish gif"/>
+			<img class="h-8 sm:h-10" src="/assets/gifs/linux_powered.gif" alt="Linux gif"/>
+			<img class="h-8 sm:h-10" src="/assets/gifs/lovenow.gif" alt="Love gif"/>
+			<img class="h-8 sm:h-10" src="/assets/gifs/koolaid.gif" alt="Koolaid gif"/>
+			<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img class="h-8 sm:h-10" src="/assets/gifs/no.gif" alt="No gif"/></a>
+		</div>
 	</div>
 </div>
