--- a/frontend/public/views/home.html
+++ b/frontend/public/views/home.html
@@ -4,7 +4,7 @@
   </div>
 </div>
 <div class="m-0 p-0 font-comic overflow-y-hidden box-border flex h-screen w-screen items-center justify-center bg-stars bg-10% text-pink-200 relative">
-  <div class="flex flex-col w-full max-w-4xl h-[95vh] bg-black p-4 sm:p-6 md:p-8 text-center border-8 animate-rainbow overflow-y-auto custom-scrollbar">
+  <div class="relative flex flex-col w-full max-w-4xl h-[95vh] bg-black p-4 sm:p-6 md:p-8 text-center border-8 animate-rainbow overflow-y-auto custom-scrollbar">
     <div class="flex justify-center items-center py-6">
       <img src="https://i.picasion.com/gl/92/kjzM.gif" alt="header gif" class="w-full max-w-[750px] h-auto"/>
     </div>
@@ -20,7 +20,9 @@
           referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
         </iframe>
       </div>
-      <img class="w-full max-w-xs h-auto" src="/assets/gifs/gojo.gif" alt="Gojo gif"/>
+      <div class="absolute bottom-0 left-1/2 transform -translate-x-1/2 z-10">
+        <img class="w-full max-w-xs h-auto" src="/assets/gifs/gojo.gif" alt="Gojo gif"/>
+		  </div>
     </div>
   </div>
   <img class="fixed bottom-4 left-4 w-[20vw] max-w-[120px] h-auto z-40" src="/assets/gifs/patricksponge.gif" alt="Patrick star gif"/>
