Fix scrollbar for friends/requests to work again

--- a/frontend/public/views/profile.html
+++ b/frontend/public/views/profile.html
@@ -67,11 +67,11 @@
 			</div>
 			<div class="flex flex-col items-center border-8 animate-rainbow p-6 h-64 sm:h-72 w-full">
 				<h1 class="text-base sm:text-lg font-bold">Friends</h1>
-				<ul id="friendsList"></ul>
+				<ul id="friendsList" class="w-full overflow-y-auto custom-scrollbar max-h-48 mt-2"></ul>
 			</div>
 			<div class="flex flex-col items-center border-8 animate-rainbow p-6 h-48 w-full">
 				<h1 class="text-base sm:text-lg font-bold">Friend Requests</h1>
-				<ul id="requests"></ul>
+				<ul id="requests" class="w-full overflow-y-auto custom-scrollbar max-h-48 mt-2"></ul>
 			</div>
 			<div class="flex flex-col items-center border-8 animate-rainbow p-6 h-48 w-full" >
 				<h1 class="text-base sm:text-lg font-bold">Friend Search</h1>
